--- a/DistributedOrderingSystem/app/src/main/res/layout/content_my.xml
+++ b/DistributedOrderingSystem/app/src/main/res/layout/content_my.xml
@@ -42,7 +42,8 @@
         android:backgroundTint="#FFFF31B4"
         android:hint="username"
         android:layout_centerHorizontal="true"
-        android:textColorHint="#ff31b4" />
+        android:textColorHint="#ff31b4"
+        android:textColor="#ffffff" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -56,7 +57,8 @@
         android:autoText="false"
         android:hint="password"
         android:textColorHint="#FFFF31B4"
-        android:backgroundTint="#FFFF31B4" />
+        android:backgroundTint="#FFFF31B4"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
