--- a/DistributedOrderingSystem/app/src/main/res/layout/content_table_info.xml
+++ b/DistributedOrderingSystem/app/src/main/res/layout/content_table_info.xml
@@ -36,8 +36,8 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edit"
-        android:id="@+id/edit1"
+        android:text="Add"
+        android:id="@+id/addItem"
         android:layout_below="@+id/space2"
         android:layout_alignParentStart="true" />
 
@@ -73,7 +73,7 @@
         android:layout_width="50px"
         android:layout_height="20px"
         android:id="@+id/space"
-        android:layout_toEndOf="@+id/edit1"
+        android:layout_toEndOf="@+id/addItem"
         android:layout_alignBottom="@+id/cost1"
         android:layout_alignTop="@+id/cost1" />
 
@@ -107,5 +107,15 @@
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/order1"
         android:layout_marginStart="21dp" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="del"
+        android:id="@+id/delItem"
+        android:layout_alignBottom="@+id/addItem"
+        android:layout_toEndOf="@+id/space"
+        android:onClick="deleteList" />
 
 </RelativeLayout>
