--- a/MyApplication2/app/src/main/res/layout/content_main.xml
+++ b/MyApplication2/app/src/main/res/layout/content_main.xml
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="Table #"
         android:textSize="20dp"
         android:ems="10"
         android:id="@+id/editText3"
