--- a/MyApplication2/app/src/main/res/layout/activity_main2.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_main2.xml
@@ -445,6 +445,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="CHECK OUT"
-        android:id="@+id/button3" />
+        android:id="@+id/button3"
+        android:onClick="checkOut"/>
 
 </RelativeLayout>
