Add queue, add create account

--- a/DistributedOrderingSystem/app/src/main/res/layout/content_my.xml
+++ b/DistributedOrderingSystem/app/src/main/res/layout/content_my.xml
@@ -29,7 +29,8 @@
         android:background="@drawable/btn_orange_matte"
         android:layout_alignTop="@+id/button"
         android:layout_alignEnd="@+id/pwd1"
-        android:clickable="true" />
+        android:clickable="true"
+        android:onClick="createAccount" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -69,15 +70,5 @@
         android:layout_alignStart="@+id/button"
         android:textColor="#ff0000"
         android:visibility="invisible" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/button2"
-        android:layout_marginBottom="85dp" />
 
 </RelativeLayout>
