--- a/DistributedOrderingSystem/app/src/main/res/layout/content_table_layout.xml
+++ b/DistributedOrderingSystem/app/src/main/res/layout/content_table_layout.xml
@@ -25,7 +25,7 @@
             android:id="@+id/table1"
             android:layout_marginTop="25dp"
             android:elegantTextHeight="false"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundbuttonpurple"
             android:textSize="32dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
@@ -38,9 +38,9 @@
             android:layout_height="wrap_content"
             android:text="2"
             android:id="@+id/table2"
-            android:layout_marginTop="125dp"
+            android:layout_marginTop="100dp"
             android:elegantTextHeight="false"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundbuttonpurple"
             android:textSize="32dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
@@ -53,9 +53,9 @@
             android:layout_height="wrap_content"
             android:text="3"
             android:id="@+id/table3"
-            android:layout_marginTop="225dp"
+            android:layout_marginTop="175dp"
             android:elegantTextHeight="false"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundbuttonpurple"
             android:textSize="32dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
@@ -69,9 +69,9 @@
         android:layout_height="wrap_content"
         android:text="4"
         android:id="@+id/table4"
-        android:layout_marginTop="325dp"
+        android:layout_marginTop="250dp"
         android:elegantTextHeight="false"
-        android:background="@drawable/roundbutton"
+        android:background="@drawable/roundbuttonpurple"
         android:textSize="32dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
@@ -84,9 +84,9 @@
             android:layout_height="wrap_content"
             android:text="5"
             android:id="@+id/table5"
-            android:layout_marginTop="425dp"
+            android:layout_marginTop="325dp"
             android:elegantTextHeight="false"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundbuttonpurple"
             android:textSize="32dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
@@ -101,7 +101,7 @@
             android:id="@+id/table6"
             android:layout_marginTop="25dp"
             android:elegantTextHeight="false"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundbuttonpurple"
             android:textSize="32dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
@@ -114,9 +114,9 @@
             android:layout_height="wrap_content"
             android:text="7"
             android:id="@+id/table7"
-            android:layout_marginTop="125dp"
+            android:layout_marginTop="100dp"
             android:elegantTextHeight="false"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundbuttonpurple"
             android:textSize="32dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
@@ -129,9 +129,9 @@
             android:layout_height="wrap_content"
             android:text="8"
             android:id="@+id/table8"
-            android:layout_marginTop="225dp"
+            android:layout_marginTop="175dp"
             android:elegantTextHeight="false"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundbuttonpurple"
             android:textSize="32dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
@@ -144,9 +144,9 @@
             android:layout_height="wrap_content"
             android:text="9"
             android:id="@+id/table9"
-            android:layout_marginTop="325dp"
+            android:layout_marginTop="250dp"
             android:elegantTextHeight="false"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundbuttonpurple"
             android:textSize="32dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
@@ -159,15 +159,28 @@
             android:layout_height="wrap_content"
             android:text="10"
             android:id="@+id/table10"
-            android:layout_marginTop="425dp"
+            android:layout_marginTop="325dp"
             android:elegantTextHeight="false"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/roundbuttonpurple"
             android:textSize="32dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
             android:layout_marginStart="215dp"
             android:onClick="viewTable"
             android:clickable="true" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Order Queue"
+            android:id="@+id/queue1"
+            android:background="@drawable/roundbuttongray"
+            android:layout_below="@+id/table5"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="50dp"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:onClick="viewOrders" />
 
     </RelativeLayout>
 </RelativeLayout>
