Add docstrings/comments, fix odd ends

--- a/DistributedOrderingSystem/app/src/main/res/layout/content_table_layout.xml
+++ b/DistributedOrderingSystem/app/src/main/res/layout/content_table_layout.xml
@@ -172,7 +172,7 @@
         <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Order Queue"
+            android:text="Order Schedule"
             android:id="@+id/queue1"
             android:background="@drawable/roundbuttongray"
             android:layout_below="@+id/table5"
