--- a/MyApplication2/app/src/main/res/layout/activity_main22.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_main22.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,11 +12,6 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imagen"
-        android:src="@drawable/chicken" />
 
     <Button
         android:layout_width="wrap_content"
@@ -28,4 +23,4 @@
         android:nestedScrollingEnabled="false" />
 
 
-</LinearLayout>
+</RelativeLayout>
