--- a/MyApplication2/app/src/main/res/layout/activity_main22.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_main22.xml
@@ -9,6 +9,7 @@
         android:text="TICKET"
         android:textSize="30dp"
         android:id="@+id/ticket"
+        android:layout_marginTop="15dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -20,7 +21,119 @@
         android:id="@+id/button4"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:nestedScrollingEnabled="false" />
+        android:layout_marginBottom="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TOTAL PRICE"
+        android:id="@+id/total_price_text"
+        android:textSize="15dp"
+        android:layout_toLeftOf="@+id/total_price_text_view"
+        android:layout_above="@+id/button4"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="50dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TAXES"
+        android:id="@+id/taxes_text"
+        android:layout_marginBottom="18dp"
+        android:layout_marginRight="30dp"
+        android:layout_toLeftOf="@+id/taxes_text_view"
+        android:layout_above="@+id/total_price_text" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TOTAL"
+        android:id="@+id/total_text"
+        android:layout_marginBottom="18dp"
+        android:layout_marginRight="30dp"
+        android:layout_above="@+id/taxes_text"
+        android:layout_toLeftOf="@+id/price_text_view" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="$2"
+        android:textSize="16sp"
+        android:textColor="#000000"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/taxes_text_view"
+        android:id="@+id/price_text_view" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="$400"
+        android:textSize="16sp"
+        android:textColor="#000000"
+        android:layout_marginBottom="50dp"
+        android:layout_marginRight="40dp"
+        android:layout_above="@+id/button4"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/total_price_text_view" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="15%"
+        android:textSize="16sp"
+        android:textColor="#000000"
+        android:layout_marginBottom="16dp"
+        android:layout_above="@+id/total_price_text_view"
+        android:layout_marginRight="40dp"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/taxes_text_view" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:textSize="12dp"
+        android:id="@+id/order1"
+        android:layout_marginLeft="16dp"
+        android:layout_below="@+id/ticket"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="85dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:id="@+id/qty1"
+        android:layout_alignTop="@+id/order1"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="180dp"
+        android:layout_alignStart="@+id/ticket" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="ADD"
+        android:onClick="addToOrder"
+        android:id="@+id/button_add"
+        android:layout_marginRight="70dp"
+        android:layout_marginBottom="140dp"
+        android:layout_marginLeft="16dp"
+        android:layout_above="@+id/button4"
+        android:layout_toStartOf="@+id/total_price_text" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="DELETE"
+        android:onClick="deleteFromOrder"
+        android:id="@+id/button_delete"
+        android:layout_above="@+id/button4"
+        android:layout_marginLeft="110dp"
+        android:layout_marginRight="170dp"
+        android:gravity="left|center_vertical"
+        android:layout_marginBottom="140dp" />
 
 
 </RelativeLayout>
