--- a/MyApplication2/app/src/main/res/layout/activity_main22.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_main22.xml
@@ -21,7 +21,8 @@
         android:id="@+id/button4"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp" />
+        android:layout_marginBottom="20dp"
+        android:onClick="sendTicket"/>
 
     <TextView
         android:layout_width="wrap_content"
